k8s/eck/svc-es-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: eck-es-http-nodeport
  namespace: elastic-stack
spec:
  ports:
    - name: https
      port: 9200
      protocol: TCP
      targetPort: 9200
      nodePort: 30101
  selector:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: eck
  type: NodePort
